# helm-phase-3

./: Dockerfile  INSTALL.md  README-DEV.md  README-HELM-INSTALLATION.md  README.md  amitchart-0.1.0.tgz  app.py  index.yaml  pyproject.toml  requirements-dev.txt  status.txt
.github/actions/uv-install-dev/: action.yaml
.github/workflows/: CI.yaml  ci-cd-helm.yml  ci-docker.yaml  ci-tests.yaml  publish-helm.yml
amitchart/: Chart.yaml  values.yaml
amitchart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
argocd/: argocd-app.yaml
tests/: test_hello.py
