[project]
name = "helm-phase-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.3",
]

[dependency-groups]
dev = [
    "pylint>=3.2.7",
    "pytest>=8.3.5",
    "requests>=2.32.4",
]

[tool.uv]
default-groups = []
